# TextEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Doc/: config
dependencies/include/mingw/ncursesw/: ncurses.h  term.h
dependencies/include/ncurses/: curses.h  ncurses.h  ncurses_dll.h  unctrl.h
dependencies/lib/OIS/: libOIS.1.5.1.dylib
dependencies/lib/ncurses/Darwin/terminfo/61/: altos5
dependencies/lib/ncurses/Darwin/terminfo/62/: basic4
dependencies/lib/ncurses/Darwin/terminfo/68/: hp700-wy
dependencies/lib/ncurses/Darwin/terminfo/6e/: ncsa-ns  news-29  news-29-euc  news-33-euc  news-42-euc  news28  news29  news31  nwp-517  nwp512-a  nwp517-w
dependencies/lib/ncurses/Darwin/terminfo/70/: pcvt25-color  pcvt28  pcvt40  pcvt40w  pcvt43w  pcvtXX
dependencies/lib/ncurses/Darwin/terminfo/74/: ti916-220-7  ti916-8  tvi9065  tvi910+  tvi912cc  tvi914  tvi921  tvi924  tvipt
dependencies/lib/ncurses/Darwin/terminfo/76/: v200-nam  vt100-bm  vt220-8bit  vt220-base  vt220-w  vt220d  vt300-w  vt320-k311  vt320-w-nam  vt400  vt420f  vt510pc  vt510pcdos  vt525
dependencies/lib/ncurses/Darwin/terminfo/7a/: z29a  z340  z340-nam
dependencies/lib/ncurses/terminfo/61/: a210  alt2
dependencies/lib/ncurses/terminfo/64/: dec-vt220
dependencies/lib/ncurses/terminfo/68/: h29a-kc-uc  h29a-nkc-bc  hpex  hpsub
dependencies/lib/ncurses/terminfo/6e/: ncsa  ncsa-m  ncsa-m-ns  ncsa-vt220  news-29-sjis  news-33  news-33-sjis  news-42  news-42-sjis  news-old-unk  news-unk  nwp518-a
dependencies/lib/ncurses/terminfo/6f/: otek4115
dependencies/lib/ncurses/terminfo/70/: pcvt25  pcvt25w  pcvt28w  pcvt35  pcvt35w  pcvt43  pcvt50  pcvt50w
dependencies/lib/ncurses/terminfo/72/: rebus3180
dependencies/lib/ncurses/terminfo/74/: ti916-132  ti916-8-132  tvi910  tvi92B
dependencies/lib/ncurses/terminfo/75/: uts30
dependencies/lib/ncurses/terminfo/76/: v320n  versaterm  vt200-js  vt220  vt220-old  vt320  vt320-nam  vt340  vt420  vt420pc  vt420pcdos  vt510  vt520  vt520ansi
dependencies/lib/ncurses/terminfo/7a/: z29a-nkc-uc
include/TextEditor/: BaseWindow.h  InputHandler.h  KeyDefinition.h  SingletonAbstract.hpp  TerminalContext.h  TerminalUtil.h  TextEditWindow.h  Window.h  WindowManager.h  datatype.h  definition.h  utility.hpp
scripts/: assist.py  makeDoc.sh
src/: BaseWindow.cpp  InputHandler.cpp  TerminalContext.cpp  TerminalUtil.cpp  TextEditWindow.cpp  Window.cpp  WindowManager.cpp  datatype.cpp  main.cpp
